[package]
name = "rustainers"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

license = "MIT OR Apache-2.0"

categories = ["development-tools::testing"]
keywords = ["testcontainers", "container", "docker", "podman"]
description = "A simple, opinionated way to run containers for tests."
readme = "README.md"
repository = "https://github.com/wefoxplatform/rustainers"

rust-version = "1.67.0" # toml_datetime

[features]
default = []

regex = ["dep:regex"]

# Test features
ensure-docker = []
ensure-podman = []
ensure-nerdctl = []
very-long-tests = []

[dependencies]
async-trait = "0.1.74"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2.1.0"
path-absolutize = "3.1.1"
regex = { version = "1.10.3", optional = true }
reqwest = { version = "0.11.24" }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.0"
thiserror = "1.0.40"
tokio = { version = "1.34", features = [
  "time",
  "process",
  "fs",
  "sync",
  "io-util",
] }
tracing = "0.1.40"
typed-builder = "0.18.0"
ulid = "1.1.0"

[dev-dependencies]
ahash = "=0.8.7"
anyhow = "1.0"
assert2 = "=0.3.11"
bytes = "1.5"
futures-util = "0.3.28"
insta = { version = "1.29", features = ["json"] }
mongodb = "2.7.1"
object_store = { version = "0.8.0", features = ["aws"] }
rdkafka = { version = "0.36" }
redis = "0.23"
rstest = "0.18"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[lints]
workspace = true
