[package]
name = "rustainers"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

license = "MIT OR Apache-2.0"

categories = ["development-tools::testing"]
keywords = ["testcontainers", "container", "docker", "podman"]
description = "A simple, opinionated way to run containers for tests."
readme = "README.md"
repository = "https://github.com/wefoxplatform/rustainers"

rust-version = "1.67.0" # toml_datetime

[features]
default = []

regex = ["dep:regex"]

# Test features
ensure-docker = []
ensure-podman = []
ensure-nerdctl = []
very-long-tests = []

[dependencies]
async-trait = "0.1.81"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2.3.0"
ipnetwork = "0.20.0"
path-absolutize = "3.1.1"
regex = { version = "1.10.6", optional = true }
reqwest = { version = "0.12.5" }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.122"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
tokio = { version = "1.39", features = [
  "time",
  "process",
  "fs",
  "sync",
  "io-util",
] }
tracing = "0.1.40"
typed-builder = "0.19.1"
ulid = "1.1.3"

[dev-dependencies]
ahash = "=0.8.7"
anyhow = "1.0"
assert2 = "=0.3.11"
bytes = "1.7"
futures-util = "0.3.30"
insta = { version = "1.39", features = ["json"] }
mongodb = "3.0.1"
object_store = { version = "0.10.2", features = ["aws"] }
rdkafka = { version = "0.36" }
redis = "0.26"
rstest = "0.22"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[lints]
workspace = true

