[package]
name = "rustainers"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

license = "MIT OR Apache-2.0"

categories = ["development-tools::testing"]
keywords = ["testcontainers", "container", "docker", "podman"]
description = "A simple, opinionated way to run containers for tests."
readme = "README.md"
repository = "https://github.com/wefoxplatform/rustainers"

rust-version = "1.80.0"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]

regex = ["dep:regex"]

# Test features
ensure-docker = []
ensure-podman = []
ensure-nerdctl = []
very-long-tests = []

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2.3.0"
ipnetwork = { version = "0.21.1", features = ["serde"] }
path-absolutize = "3.1.1"
regex = { version = "1.10.6", optional = true }
reqwest = { version = "0.12.5", default-features = false, features = [
  "charset",
  "http2",
  "macos-system-configuration",
] }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.122"
thiserror = "2.0.11"
tokio = { version = "1.39", features = [
  "time",
  "process",
  "fs",
  "sync",
  "io-util",
] }
tracing = "0.1.40"
typed-builder = "0.20.0"
ulid = "1.1.3"

[dev-dependencies]
ahash = "0.8.11"
anyhow = "1.0"
assert2 = "0.3.15"
bytes = "1.7"
futures-util = "0.3.30"
insta = { version = "1.39", features = ["json"] }
mongodb = "3.0.1"
object_store = { version = "0.12.0", features = ["aws"] }
rdkafka = { version = "0.37.0" }
redis = "0.28.2"
rstest = "0.24.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[lints]
workspace = true
